Bug 1358075 - Display friendly names for .webloc files on OSX after dragging URLs to Finder. r=mstange, a=jcristau

--HG--
extra : source : 06d42295ca4263b18f876362477d4959bc3b14ef